--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --bg:#eeeeee;
     --highlighted:white;
     font-family: sans-serif;
-    font-size: 50px;
+    font-size: 10px;
     --shadow-color: hsl(0, 0%, 0%,0.25);;
 }
 
@@ -15,7 +15,7 @@
 
 .gridContainer{
     display: grid;
-    grid-template-columns: 4fr 6fr;
+    grid-template-columns: 6fr 6fr;
     background-color: var(--bg);
     height: 100vh;
 }
@@ -28,7 +28,7 @@
 .hero h1{
     color: white;
     font-family: Helvetica, sans-serif;
-    font-size: 5rem;
+    font-size: 4rem;
     text-align: center;
     background-color: hsl(0, 0%, 0%,0.5);
     margin-top: 30vh;
@@ -41,9 +41,9 @@
     content:"";
     background-image: url(images/odin_logo.png);
     display: inline-block;
-    width: 1.5em; 
+    width: 2.5em; 
     height: 2em;
-    background-size: contain;
+    background-size: cover;
 }
 
 .rightSide > *{
@@ -78,7 +78,7 @@ form {
 
 label{
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 10px;
     letter-spacing: 0.5px;
     font-weight: bold;
     color: hsl(0, 0%, 26%);
@@ -89,7 +89,7 @@ label input{
     display: block;
     width: 35ch;
     padding: 0.25em;
-    font-size: 50px;
+    font-size:10px;
     border-radius: 5px;
     border: 2px solid #E5E7EB;
     background-color: hsl(220, 13%, 97%);
