--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+/* Recap: Structural Pseudo-classes */ 
 :root{
     --accent:#596D48;
     --accent-lighter:#627451;
     --bg:#eeeeee;
-    --highlighted:white;
+    --highlighted: white;
     font-family: sans-serif;
     font-size: 10px;
     --shadow-color: hsl(0, 0%, 0%,0.25);;
@@ -15,7 +16,7 @@
 
 .gridContainer{
     display: grid;
-    grid-template-columns: 6fr 6fr;
+    grid-template-columns: 1fr 1fr;
     background-color: var(--bg);
     height: 100vh;
 }
@@ -29,9 +30,10 @@
     color: white;
     font-family: Helvetica, sans-serif;
     font-size: 4rem;
+    padding: 10px;
     text-align: center;
     background-color: hsl(0, 0%, 0%,0.5);
-    margin-top: 30vh;
+    margin-top: 15vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,7 +44,8 @@
     background-image: url(images/odin_logo.png);
     display: inline-block;
     width: 2.5em; 
-    height: 2em;
+    height: 4.5em;
+    padding-right: 1em;
     background-size: cover;
 }
 
@@ -99,7 +102,7 @@ label input{
 label input:focus{
     transition: box-shadow 0.2s ease-in;
     outline: none;
-    border: 2px solid rgb(93, 93, 255);
+    border: 2px solid gold; 
     box-shadow: 0 0px 15px var(--shadow-color);
 }
 
